--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,22 @@
   padding: 20px;
 }
 
+.horizontal {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.vertical {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
 .App-link {
   color: #0029cd;
 }
