--- a/src/App.css
+++ b/src/App.css
@@ -19,9 +19,9 @@
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  align-items: flex-start;
+  align-items: center;
   text-align: left;
-  justify-content: flex-start;
+  justify-content: center;
   font-size: 30px;
   color: black;
   padding: 20px;
@@ -32,16 +32,16 @@
 .horizontal {
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
-  align-items: center;
+  justify-content: center;
+  align-items: top;
   flex-wrap: wrap;
 }
 
 .vertical {
   display: flex;
   flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
+  justify-content: center;
+  align-items: center;
   width: 100%;
 }
 
@@ -81,7 +81,7 @@
 
 p {
   max-width: 1000px;
-  padding: 10px;
+  padding: 50px;
 }
 
 img {
