--- a/src/App.css
+++ b/src/App.css
@@ -1,97 +1,49 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.menu-bar {
+    background: #cdeedb;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-items: center;
+    min-height: 5vh;
   }
+
+.menu-item {
+  margin-left: 30px;
+  font-size: 15px;
+  font-weight: 600;
+  font-family: Helvetica;
 }
 
-.App-header {
+.content {
+  min-height: 95vh;
   background: linear-gradient(to bottom, #cdeedb, #a6c9e7);
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  align-items: center;
-  text-align: left;
-  justify-content: center;
   font-size: 30px;
-  color: black;
-  padding: 20px;
-  padding-left: 1vw;
-  padding-right: 1vw;
+  font-family: Helvetica;
 }
 
-.horizontal {
+.content-section {
+  padding-top: 50px;
   display: flex;
   flex-direction: row;
-  justify-content: center;
-  align-items: top;
   flex-wrap: wrap;
-}
-
-.vertical {
-  display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
 }
 
-.App-link {
-  color: #0029cd;
+.content-item {
+  margin-left: 40px;
+  max-width: 700px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-.small-image {
+.portrait {
   max-width: 273px;
   max-height: 298px;
-}
-
-.rounded-image {
   border-radius: 10%;
 }
 
-.headline-text {
-  font-size: 50px;
-  font-weight: bold;
-  font-family: "Tahoma", sans-serif;
-}
-
-.bold-text {
-  font-size: 30px;
-  font-weight: bold;
-  font-family: "Tahoma", sans-serif;
-}
-
-p {
-  max-width: 1000px;
-  padding: 50px;
-}
-
-img {
-  padding: 10px;
-}
-
-.large-text {
-  font-size: 50px;
-}
-
-.centered-text {
-  text-align: center;
+.fade-in {
+  opacity: 1;
 }
