--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,8 @@
   font-size: 15px;
   font-weight: 600;
   font-family: Helvetica;
+  opacity: 0;
+  transition: opacity 0.5s ease-in;
 }
 
 .content {
@@ -30,7 +32,8 @@
   justify-content: center;
   align-items: center;
   opacity: 0;
-  transition: opacity 0.5s ease-in;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease-in, transform 0.5s ease-in;
 }
 
 .content-item {
@@ -46,4 +49,9 @@
 
 .fade-in {
   opacity: 1;
+}
+
+.animate-content {
+  opacity: 1;
+  transform: translateY(0);
 }
