--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,10 @@
 }
 
 .content-item {
-  margin-left: 40px;
+  justify-content: left;
+  align-items: center;
+  margin-left: 20px;
+  margin-right: 20px;
   max-width: 700px;
 }
 
