Replaced default readme with one that includes a screenshot

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@
   background: linear-gradient(to bottom, #cdeedb, #a6c9e7);
   font-size: 30px;
   font-family: Helvetica;
+  text-align: justify;
 }
 
 .content-section {
